# anomaly_detection_-_synth_llm

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  LICENSE  Makefile  PLAN.md  README.md  pyproject.toml
.github/workflows/: ci.yml  deploy.yml
api/: config.py  db.py  explain.py  export_scored_sample.py  live_features.py  load_data.py  load_full_history.py  main.py  model_bundle.py  schemas.py  serve.py
dashboard/: api_client.py  app.py  config.py
data_sim/: __init__.py  config.py  customers.py  schemas.py  simulate.py  transactions.py  typologies.py
docs/: architecture.md  data_dictionary.md  model_card.md  model_validation_report.md
docs/adr/: 0001-llm-provider-and-hosting-stack.md
evaluation/: __init__.py  effort_reduction.py  fairness.py  monitoring.py  run_effort_reduction_check.py  run_fairness_check.py  run_monitoring_check.py  run_sensitivity_check.py  sensitivity.py  splits.py  stats.py  threshold_tuning.py
features/: __init__.py  behavioral.py  contextual.py  peer_deviation.py  pipeline.py  round_amount.py  schemas.py  utils.py  velocity.py
infra/: Dockerfile.api  Dockerfile.dashboard  docker-compose.yml
infra/db/: schema.sql
infra/nginx/: anomaly-detection.conf
llm/: __init__.py  cache.py  client.py  config.py  costs.py  evaluate_typology_accuracy.py  fact_checker.py  fallback.py  generate_explanations.py  prompts.py  schemas.py
models/: __init__.py  baseline.py  evaluate.py  lightgbm_model.py  package_artifact.py  train_baseline.py  train_lightgbm.py  tuning.py
notebooks/: 01_eda.ipynb
tests/: test_api.py  test_data_sim.py  test_evaluation.py  test_features.py  test_lightgbm.py  test_live_features.py  test_llm.py  test_models.py  test_package_artifact.py
